apps/dashboard/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Hide scrollbar for Chrome, Safari and Opera */
.scrollbar-none::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.scrollbar-none {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.no-scroll {
  overflow: hidden;
}

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 240 10% 3.9%;
    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;
    --primary: 240 5.9% 10%;
    --primary-foreground: 0 0% 98%;
    --secondary: 240 4.8% 95.9%;
    --secondary-foreground: 240 5.9% 10%;
    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 46.1%;
    --accent: 240 4.8% 95.9%;
    --accent-foreground: 240 5.9% 10%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;
    --ring: 240 10% 3.9%;
    --chart-1: 173 58% 39%;
    --chart-2: 12 76% 61%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
  }

  .link-tangerine {
    @apply font-mono tracking-wider text-tangerine hover:text-tangerine/80;
  }

  .dark {
    --background: 240 10% 3.9%;
    --foreground: 0 0% 98%;
    --card: 240 10% 3.9%;
    --card-foreground: 0 0% 98%;
    --popover: 240 10% 3.9%;
    --popover-foreground: 0 0% 98%;
    --primary: 0 0% 98%;
    --primary-foreground: 240 5.9% 10%;
    --secondary: 240 3.7% 15.9%;
    --secondary-foreground: 0 0% 98%;
    --muted: 240 3.7% 15.9%;
    --muted-foreground: 240 5% 64.9%;
    --accent: 240 3.7% 15.9%;
    --accent-foreground: 0 0% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 3.7% 15.9%;
    --input: 240 3.7% 15.9%;
    --ring: 240 4.9% 83.9%;
    --chart-1: 220 70% 50%;
    --chart-2: 340 75% 55%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 160 60% 45%;
    --chart-6: 200 75% 45%;
    --chart-7: 50 85% 50%;
  }
}

@layer utilities {
  .card-container-about {
    @apply flex flex-col rounded-lg border border-lightDark bg-dark shadow sm:max-w-full lg:max-w-[250px] xl4k:max-w-full;
  }

  .card-header-about {
    @apply flex items-center gap-3 rounded-t-lg border-b border-lightDark px-4 py-3;
  }

  .card-header-about-text {
    @apply text-base font-normal leading-normal;
  }

  .card-body-about {
    @apply flex h-full flex-col gap-4 p-3;
  }

  .card-description-about {
    @apply flex h-full flex-col space-y-2 p-1;
  }

  .card-description-title {
    @apply flex items-center gap-1.5;
  }

  .skeleton-text {
    @apply animate-pulse rounded-md bg-gray-300;
  }

  .skeleton-icon {
    @apply animate-pulse rounded-full bg-gray-300;
  }

  .btn-connect-wallet {
    @apply flex size-9 items-center justify-center gap-3 rounded-md border border-transparent bg-lightDark py-1 px-2 text-white hover:border hover:border-lightDark hover:bg-transparent;
  }

  .card-text-accordion {
    @apply text-sm font-normal leading-normal text-foreground;
  }

  .section-title-gap {
    @apply gap-4 sm:gap-6;
  }

  .page-sections-gap {
    @apply  sm:gap-3;
  }
}

